added more stuff

--- a/Gallery.html
+++ b/Gallery.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
-    <title>Eternal Empires 2</title>
+    <title>Gallery</title>
     <style>
         body {
             background-color: var(--bs-gray-dark);
@@ -32,44 +32,48 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-sm-0 navbar-text">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="Mods.html">Mods/Datapacks</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Gallery.html">Gallery</a>
+                    <a class="nav-link active" aria-current="page" href="Gallery.html">Gallery</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
-<div class="bg-image" style="
-      background-image: url('images/spawn.png');
-      background-position: center center;
-      height: calc(100vh - 74px);
-      margin-top: -24px;">
-    <div class="container mt-4 mask h-100" style="background-color: #000c">
-        <div class="bg-image h-100" style="
-            background-image: url('images/spawnfront.png');
-            background-position: center center;
-            margin: 0 -12px;">
-            <div class="row" >
-                <div class="col-md-3">
-                </div>
-                <div class="col-md-6">
-                    <p>
-                    <h1>Welcome to the Eternal Empires 2 webpage!</h1><br>
-                    Here you can learn more information about the server, such as what mods and datapacks we use.
-                </div>
-                <div class="col-md-3 mt-4">
-                    <h2>Server status</h2>
-                    <p>offline</p>
+<section class="py-5 text-center container">
+    <div class="row py-lg-5">
+        <div class="col-lg-6 col-md-8 mx-auto">
+            <h1>Our gallery</h1>
+            <p>
+                These are the works of our members!
+            </p>
+            <p>
+                <a href="#" class="btn btn-primary my-2">Submit yours here!</a>
+            </p>
+        </div>
+    </div>
+</section>
+<div class="album py-5 bg-dark">
+    <div class="container">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            <div class="col">
+                <div class="card bg-dark" style="border: none">
+                    <a href="#" class="card-img-top">
+                        <img src="images/lava.png" alt="lava" class="card-img-top">
+                    </a>
+                    <div class="card-body" style="border-bottom-left-radius: calc(.25rem - 1px); border-bottom-right-radius: calc(.25rem - 1px)">
+                        <p class="card-text">
+                            Here is lava. Picture by me.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
