--- a/Datapacks.html
+++ b/Datapacks.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link rel="icon"
+        type="image/png"
+        href="images/favicon.webp">
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,7 +11,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
-  <title>Hello, world!</title>
+  <title>Datapacks</title>
   <style>
     body {
       background-color: var(--bs-gray-dark);
@@ -18,54 +21,64 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-  <div class="container">
-    <a class="navbar-brand" href="index.html">
-      <img src="Instinct_Vol_1.jpg" width="40" class="d-inline-block">
-      Eternal Empires 2
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ms-auto mb-2 mb-sm-0 navbar-text">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="Mods.html">Mods/Datapacks</a>
-        </li>
-      </ul>
+    <div class="container">
+        <a class="navbar-brand" href="index.html">
+            <img src="images/icon.webp" width="48" class="d-inline-block" alt="icon">
+            Eternal Empires 2
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-sm-0 navbar-text">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="Mods.html">Mods/Datapacks</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Gallery.html">Gallery</a>
+                </li>
+            </ul>
+        </div>
     </div>
-  </div>
 </nav>
-<div class="container mt-4">
-  <div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Datapacks
-    </button>
-    <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton1">
-      <li><a class="dropdown-item" href="Mods.html">Mods</a></li>
-      <li><a class="dropdown-item" href="Datapacks.html">Datapacks</a></li>
-      <li><a class="dropdown-item" href="Crafting.html">Crafting tweaks</a></li>
+<div class="bg-image" style="
+      background-image: url('images/ambient.png');
+      background-position: center center;
+      height: calc(100vh - 74px);
+      margin-top: -24px;">
+    <div class="container p-4 mt-4 mask h-100" style="background-color: #000c">
+    <ul class="nav nav-tabs">
+      <li class="nav-item">
+        <a class="nav-link" href="Mods.html">Mods</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active text-light" style="background: none" aria-current="page" href="Datapacks.html">Datapacks</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="Crafting.html">Crafting Tweaks</a>
+      </li>
     </ul>
-  </div>
-  <h3 class="mt-3">All datapacks are from <a target="_blank" href="https://vanillatweaks.net/picker/datapacks/">Vanilla Tweaks</a>.</h3>
-  <div class="list-group list-group-flush mt-3">
-    <li class="list-group-item text-white bg-dark">
-      <span class="fw-bold">Armor Statues</span><br/>
-      Adds a unique book that allows you to alter the properties of armor stands in survival.</li>
-    <li class="list-group-item text-white bg-dark">
-      <span class="fw-bold">Workstation Highlights</span><br/>
-      Allows you to find the workstation of any villager.</li>
-    <li class="list-group-item text-white bg-dark">
-      <span class="fw-bold">More Mob Heads</span><br/>
-      Adds a chance to recieve a mob head upon killing it.</li>
-    <li class="list-group-item text-white bg-dark">
-      <span class="fw-bold">Silence Mobs</span><br/>
-      Adds the ability to silence mobs using a name tag. 'Silence me', 'silence me' 'silence_me' are all acceptable names.</li>
-    <li class="list-group-item text-white bg-dark">
-      <span class="fw-bold">Wandering Trades</span><br/>
-      Adds Mini Blocks to the Wandering Trader's trades.</li>
+        <h3 class="mt-3">All datapacks are from <a target="_blank" href="https://vanillatweaks.net/picker/datapacks/">Vanilla Tweaks</a>.</h3>
+        <ul class="list-group list-group-flush mt-3">
+          <li class="list-group-item text-white" style="background-color: #20252999; border: 2px solid #101519">
+            <span class="fw-bold">Armor Statues</span><br/>
+            Adds a unique book that allows you to alter the properties of armor stands in survival.</li>
+          <li class="list-group-item text-white" style="background-color: #20252999; border: 2px solid #101519">
+            <span class="fw-bold">Workstation Highlights</span><br/>
+            Allows you to find the workstation of any villager.</li>
+          <li class="list-group-item text-white" style="background-color: #20252999; border: 2px solid #101519">
+            <span class="fw-bold">More Mob Heads</span><br/>
+            Adds a chance to recieve a mob head upon killing it.</li>
+          <li class="list-group-item text-white" style="background-color: #20252999; border: 2px solid #101519">
+            <span class="fw-bold">Silence Mobs</span><br/>
+            Adds the ability to silence mobs using a name tag. 'Silence me', 'silence me' 'silence_me' are all acceptable names.</li>
+          <li class="list-group-item text-white" style="background-color: #20252999; border: 2px solid #101519">
+            <span class="fw-bold">Wandering Trades</span><br/>
+            Adds Mini Blocks to the Wandering Trader's trades.</li>
+        </ul>
   </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
