--- a/Mods.html
+++ b/Mods.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <link rel="icon"
+          type="image/png"
+          href="images/favicon.webp">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,7 +11,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Mods</title>
     <style>
         body {
             background-color: var(--bs-gray-dark);
@@ -20,7 +23,7 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" href="index.html">
-            <img src="Instinct_Vol_1.jpg" width="40" class="d-inline-block">
+            <img src="images/icon.webp" width="48" class="d-inline-block" alt="icon">
             Eternal Empires 2
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,26 +37,36 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="Mods.html">Mods/Datapacks</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Gallery.html">Gallery</a>
+                </li>
             </ul>
         </div>
     </div>
 </nav>
-<div class="container mt-4">
-    <div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-        Mods
-    </button>
-    <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton1">
-        <li><a class="dropdown-item" href="Mods.html">Mods</a></li>
-        <li><a class="dropdown-item" href="Datapacks.html">Datapacks</a></li>
-        <li><a class="dropdown-item" href="Crafting.html">Crafting tweaks</a></li>
-    </ul>
-</div>
-    <div class="list-group list-group-flush mt-3">
-        <a href="#" class="list-group-item list-group-item-action text-white bg-dark">
-            <span class="fw-bold">Name</span><br/>
-            desc
-        </a>
+<div class="bg-image" style="
+      background-image: url('images/mods.png');
+      background-position: center center;
+      height: calc(100vh - 74px);
+      margin-top: -24px;">
+    <div class="container p-4 mt-4 mask h-100" style="background-color: #000c">
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link active text-light" style="background: none" aria-current="page" href="Mods.html">Mods</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="Datapacks.html">Datapacks</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="Crafting.html">Crafting Tweaks</a>
+            </li>
+        </ul>
+        <div class="list-group list-group-flush mt-3">
+            <a href="#" class="list-group-item list-group-item-action text-white" style="background-color: #20252999; border: 2px solid #101519">
+                <span class="fw-bold">Name</span><br/>
+                desc
+            </a>
+        </div>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
