added even more stuff

--- a/Datapacks.html
+++ b/Datapacks.html
@@ -45,7 +45,7 @@
     </div>
 </nav>
 <div class="bg-image" style="
-      background-image: url('images/ambient.png');
+      background-image: url('images/green.png');
       background-position: center center;
       height: calc(100vh - 74px);
       margin-top: -24px;">
