--- a/Gallery.html
+++ b/Gallery.html
@@ -14,7 +14,13 @@
     <title>Gallery</title>
     <style>
         body {
-            background-color: var(--bs-gray-dark);
+            background-image: url("images/ambient.png");
+
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+
+            background-size: cover;
             color: var(--bs-light)
         }
     </style>
@@ -52,7 +58,7 @@
                 These are the works of our members!
             </p>
             <p>
-                <a href="#" class="btn btn-primary my-2">Submit yours here!</a>
+                <a href="https://discord.gg/g9ZbTQ9H" target="_blank" class="btn btn-primary my-2">Submit yours here!</a>
             </p>
         </div>
     </div>
@@ -68,6 +74,18 @@
                     <div class="card-body" style="border-bottom-left-radius: calc(.25rem - 1px); border-bottom-right-radius: calc(.25rem - 1px)">
                         <p class="card-text">
                             Here is lava. Picture by me.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-dark" style="border: none">
+                    <a href="#" class="card-img-top">
+                        <img src="images/mods.png" alt="lava" class="card-img-top">
+                    </a>
+                    <div class="card-body" style="border-bottom-left-radius: calc(.25rem - 1px); border-bottom-right-radius: calc(.25rem - 1px)">
+                        <p class="card-text">
+                            Here is magma blocks in water. Picture by me.
                         </p>
                     </div>
                 </div>
