--- a/Mods.html
+++ b/Mods.html
@@ -45,7 +45,7 @@
     </div>
 </nav>
 <div class="bg-image" style="
-      background-image: url('images/mods.png');
+      background-image: url('images/forest.png');
       background-position: center center;
       height: calc(100vh - 74px);
       margin-top: -24px;">
