changed the background images so they have parallax

--- a/Datapacks.html
+++ b/Datapacks.html
@@ -44,38 +44,39 @@
         </div>
     </div>
 </nav>
-<div class="bg-image" style="
+<div class="bg-image h-1000" style="
       background-image: url('images/green.png');
+      background-attachment: fixed;
       background-position: center center;
       height: calc(100vh - 74px);
       margin-top: -24px;">
     <div class="container p-4 mt-4 mask h-100" style="background-color: #000c">
     <ul class="nav nav-tabs">
       <li class="nav-item">
-        <a class="nav-link" href="Mods.html">Mods</a>
+        <a class="nav-link text-secondary" href="Mods.html">Mods</a>
       </li>
       <li class="nav-item">
         <a class="nav-link active text-light" style="background: none" aria-current="page" href="Datapacks.html">Datapacks</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="Crafting.html">Crafting Tweaks</a>
+        <a class="nav-link text-secondary" href="Crafting.html">Crafting Tweaks</a>
       </li>
     </ul>
         <h3 class="mt-3">All datapacks are from <a target="_blank" href="https://vanillatweaks.net/picker/datapacks/">Vanilla Tweaks</a>.</h3>
         <ul class="list-group list-group-flush mt-3">
-          <li class="list-group-item text-white" style="background-color: #20252999; border: 2px solid #101519">
+          <li class="list-group-item text-white" style="background-color: rgba(78,78,78,0.6); border: 2px solid #262626">
             <span class="fw-bold">Armor Statues</span><br/>
             Adds a unique book that allows you to alter the properties of armor stands in survival.</li>
-          <li class="list-group-item text-white" style="background-color: #20252999; border: 2px solid #101519">
+          <li class="list-group-item text-white" style="background-color: rgba(49,49,49,0.6); border: 2px solid #1c1c1c">
             <span class="fw-bold">Workstation Highlights</span><br/>
             Allows you to find the workstation of any villager.</li>
-          <li class="list-group-item text-white" style="background-color: #20252999; border: 2px solid #101519">
+          <li class="list-group-item text-white" style="background-color: rgba(78,78,78,0.6); border: 2px solid #262626">
             <span class="fw-bold">More Mob Heads</span><br/>
             Adds a chance to recieve a mob head upon killing it.</li>
-          <li class="list-group-item text-white" style="background-color: #20252999; border: 2px solid #101519">
+          <li class="list-group-item text-white" style="background-color: rgba(49,49,49,0.6); border: 2px solid #1c1c1c">
             <span class="fw-bold">Silence Mobs</span><br/>
             Adds the ability to silence mobs using a name tag. 'Silence me', 'silence me' 'silence_me' are all acceptable names.</li>
-          <li class="list-group-item text-white" style="background-color: #20252999; border: 2px solid #101519">
+          <li class="list-group-item text-white" style="background-color: rgba(78,78,78,0.6); border: 2px solid #262626">
             <span class="fw-bold">Wandering Trades</span><br/>
             Adds Mini Blocks to the Wandering Trader's trades.</li>
         </ul>
