--- a/Mods.html
+++ b/Mods.html
@@ -44,8 +44,9 @@
         </div>
     </div>
 </nav>
-<div class="bg-image" style="
+<div class="bg-image h-1000" style="
       background-image: url('images/forest.png');
+      background-attachment: fixed;
       background-position: center center;
       height: calc(100vh - 74px);
       margin-top: -24px;">
@@ -55,14 +56,14 @@
                 <a class="nav-link active text-light" style="background: none" aria-current="page" href="Mods.html">Mods</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="Datapacks.html">Datapacks</a>
+                <a class="nav-link text-secondary" href="Datapacks.html">Datapacks</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="Crafting.html">Crafting Tweaks</a>
+                <a class="nav-link text-secondary" href="Crafting.html">Crafting Tweaks</a>
             </li>
         </ul>
         <div class="list-group list-group-flush mt-3">
-            <a href="#" class="list-group-item list-group-item-action text-white" style="background-color: #20252999; border: 2px solid #101519">
+            <a href="#" class="list-group-item list-group-item-action text-white" style="background-color: rgba(78,78,78,0.6); border: 2px solid #262626">
                 <span class="fw-bold">Name</span><br/>
                 desc
             </a>
