--- a/Crafting.html
+++ b/Crafting.html
@@ -44,18 +44,18 @@
         </div>
     </div>
 </nav>
-<div class="bg-image" style="
+<div class="bg-image h-100" style="
       background-image: url('images/lava.png');
+      background-attachment: fixed;
       background-position: center center;
-      height: calc(100vh - 74px);
       margin-top: -24px;">
     <div class="container p-4 mt-4 mask h-100" style="background-color: #000c">
       <ul class="nav nav-tabs">
         <li class="nav-item">
-          <a class="nav-link" href="Mods.html">Mods</a>
+          <a class="nav-link text-secondary" href="Mods.html">Mods</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Datapacks.html">Datapacks</a>
+          <a class="nav-link text-secondary" href="Datapacks.html">Datapacks</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active text-light" style="background: none" aria-current="page" href="Crafting.html">Crafting Tweaks</a>
@@ -63,34 +63,34 @@
       </ul>
           <h3 class="mt-3">All crafting tweaks are from <a target="_blank" href="https://vanillatweaks.net/picker/crafting-tweaks/">Vanilla Tweaks</a>.</h3>
           <ul class="list-group list-group-flush mt-3">
-          <li class="list-group-item text-white" style="background-color: #20252999; border: 2px solid #101519">
+          <li class="list-group-item text-white" style="background-color: rgba(78,78,78,0.6); border: 2px solid #262626">
             <span class="fw-bold">Back to Blocks</span><br/>
             Allows you to craft full blocks from stairs and slabs.</li>
-          <li class="list-group-item text-white" style="background-color: #20252999; border: 2px solid #101519">
+          <li class="list-group-item text-white" style="background-color: rgba(49,49,49,0.6); border: 2px solid #1c1c1c">
             <span class="fw-bold">Double Slabs</span><br/>
             Allows you to craft 2 slabs from a single block.</li>
-          <li class="list-group-item text-white" style="background-color: #20252999; border: 2px solid #101519">
+          <li class="list-group-item text-white" style="background-color: rgba(78,78,78,0.6); border: 2px solid #262626">
             <span class="fw-bold">Dropper to Dispenser</span><br/>
             Allows you to convert a Dropper to a Dispenser using a Bow, or by using String and Sticks.</li>
-          <li class="list-group-item text-white" style="background-color: #20252999; border: 2px solid #101519">
+          <li class="list-group-item text-white" style="background-color: rgba(49,49,49,0.6); border: 2px solid #1c1c1c">
             <span class="fw-bold">Charcoal to Black Dye</span><br/>
             Allows you to craft Charcoal into Black Dye.</li>
-          <li class="list-group-item text-white" style="background-color: #20252999; border: 2px solid #101519">
+          <li class="list-group-item text-white" style="background-color: rgba(78,78,78,0.6); border: 2px solid #262626">
             <span class="fw-bold">Sandstone Dyeing</span><br/>
             Allows you to craft Sandstone with Red Dye to get Red Sandstone.</li>
-          <li class="list-group-item text-white" style="background-color: #20252999; border: 2px solid #101519">
+          <li class="list-group-item text-white" style="background-color: rgba(49,49,49,0.6); border: 2px solid #1c1c1c">
             <span class="fw-bold">Universal Dyeing</span><br/>
             Allows you to dye any dyeable block to another color, no matter what color it is (does not include Wool and Concrete).</li>
-          <li class="list-group-item text-white" style="background-color: #20252999; border: 2px solid #101519">
+          <li class="list-group-item text-white" style="background-color: rgba(78,78,78,0.6); border: 2px solid #262626">
             <span class="fw-bold">Straight to Shapeless</span><br/>
             Craft items such as Paper, Bread and Shulker Boxes directly in your 2x2.</li>
-          <li class="list-group-item text-white" style="background-color: #20252999; border: 2px solid #101519">
+          <li class="list-group-item text-white" style="background-color: rgba(49,49,49,0.6); border: 2px solid #1c1c1c">
             <span class="fw-bold">Blackstone Cobblestone</span><br/>
             Craft all items that require Cobblestone, using Blackstone.</li>
-          <li class="list-group-item text-white" style="background-color: #20252999; border: 2px solid #101519">
+          <li class="list-group-item text-white" style="background-color: rgba(78,78,78,0.6); border: 2px solid #262626">
             <span class="fw-bold">Craftable Bundles</span><br/>
             Allows you to craft 1.18's Bundles in 1.17.</li>
-          <li class="list-group-item text-white" style="background-color: #20252999; border: 2px solid #101519">
+          <li class="list-group-item text-white" style="background-color: rgba(49,49,49,0.6); border: 2px solid #1c1c1c">
             <span class="fw-bold">Unpackable Ice</span><br/>
             Allows you to break down Ice into 9 pieces. 1 Blue Ice to 9 Packed Ice to 81 Ice.</li>
         </ul>
